--- a/templates/covid_web_height.html
+++ b/templates/covid_web_height.html
@@ -1,6 +1,8 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+         <link rel="stylesheet" href="style.css">
   <title>about corona</title>
    <style>
 
@@ -188,6 +190,34 @@ left:295px;
 top:2175px;
 
 }
+	   
+    .search-box{
+  padding: 10px;
+  position: absolute;
+  top: 2390px;
+  left: 950px;
+  transform: translate(-50%,-50%);
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid #a9d1e9;
+  border-radius: 30px;
+  transition: 0.4s;
+  width:1400px;
+}
+
+.search-btn{
+  text-decoration: none;
+  float: right;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #a9d1e9;
+}
+
 
   </style>
      <link rel="stylesheet" href="button.css">
@@ -446,6 +476,13 @@ top:2175px;
 
 
  </body>
+	
+<div class="search-box">
+    <span style = " font-size:1.2em;  color: #51575b; font-weight: bold">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 개발자 : <a href="https://github.com/shyeon0312">김서현</a> <a href="https://github.com/snowball34">원정혜</a> <a href="https://github.com/lmw7414">이민우</a> <a href="https://github.com/leesungminn">이성민</a> <a href="https://github.com/leejooyeonn">이주연</a></span>
+      <a class="search-btn" >
+        <i class="fas fa-search"></i>
+      </a>
+ </div>
 </html>
 
 <script type="text/javascript">
